# hass-gocoax

./: README.md  TODO.md  hacs.json  pyproject.toml
custom_components/gocoax/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/gocoax/pygocoax/: __init__.py  client.py  exceptions.py  models.py
custom_components/gocoax/translations/: en.json
custom_components/pygocoax/: TODO.md
test/: DECODED.txt  test-client.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entity_id_stability.py  test_pygocoax.py
